2011-10-17  Alok Priyadarshi  <alokp@chromium.org>

        Add layout tests for WebPlugin compositor path
        https://bugs.webkit.org/show_bug.cgi?id=69027

        Reviewed by James Robinson.

        * platform/chromium/compositing/plugins: Added.
        * platform/chromium/compositing/plugins/webplugin-alpha-expected.png: Added.
        * platform/chromium/compositing/plugins/webplugin-alpha-expected.txt: Added.
        * platform/chromium/compositing/plugins/webplugin-alpha.html: Added.
        * platform/chromium/compositing/plugins/webplugin-no-alpha-expected.png: Added.
        * platform/chromium/compositing/plugins/webplugin-no-alpha-expected.txt: Added.
        * platform/chromium/compositing/plugins/webplugin-no-alpha.html: Added.
        * platform/chromium/compositing/plugins/webplugin-reflection-expected.png: Added.
        * platform/chromium/compositing/plugins/webplugin-reflection-expected.txt: Added.
        * platform/chromium/compositing/plugins/webplugin-reflection.html: Added.

2011-10-17  Gavin Barraclough  <barraclough@apple.com>

        Incorrect behavior from String match/search & undefined pattern
        https://bugs.webkit.org/show_bug.cgi?id=70286

        Reviewed by Sam weinig.

        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T4-expected.txt:
        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T6-expected.txt:
        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T7-expected.txt:
        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T8-expected.txt:
        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T9-expected.txt: