@@ -1,3 +1,14 @@
+2011-10-17  Gavin Barraclough  <barraclough@apple.com>
+
+        Exception ordering in String.prototype.replace
+        https://bugs.webkit.org/show_bug.cgi?id=70290
+
+        Reviewed by Oliver Hunt.
+
+        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.11_String.prototype.replace/S15.5.4.11_A1_T11-expected.txt:
+        * sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.11_String.prototype.replace/S15.5.4.11_A1_T12-expected.txt:
+            - Check in passing results.
+
 2011-10-17  Alok Priyadarshi  <alokp@chromium.org>
 
         Add layout tests for WebPlugin compositor path
